test/tests/compiler/6_statements_and_conditional_expressions/valid/plx1_ternary_ops.plx
pub fn main(none) i32 {
    x: i32 = 2
    return 1 - ? x = 0 then 10 else (
        ? x = 1 then (
            x - 1
        ) else 20 
    ) + x
}
