test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/wrong_ternary_delimiter.plx
pub fn main(none) i32 {
    x: i32 = 10
    # make sure second delimiter in ternary expression is :
    return ? x then 1 = 2
}
